YAML-STANTARD/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-ds
  name: fastapi-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: fastapi-ds
  type: ClusterIP
